# Company_staff

./: .dockerignore  .env.template  Dockerfile  ReadMe.md  docker-compose.yml  init-database.sh  pyproject.toml
corp_staff/config/: settings.py  urls.py
corp_staff/departments/: admin.py  models.py  serializers.py  urls.py  views.py
corp_staff/departments/migrations/: 0001_initial.py  0002_alter_department_director.py
